[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/game/item/InfoItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/HUD/overview/ResourcesOverview.gd" type="Script" id=2]

[node name="ResourcesOverview" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -360.0
margin_bottom = 360.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 170.0
margin_bottom = 286.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 163.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="Label" parent="PanelContainer/Container"]
margin_right = 156.0
margin_bottom = 14.0
text = "Food"

[node name="FoodContainer" type="VBoxContainer" parent="PanelContainer/Container"]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 31.0

[node name="food" parent="PanelContainer/Container/FoodContainer" instance=ExtResource( 1 )]
margin_right = 156.0
item = "food"

[node name="People" type="Label" parent="PanelContainer/Container"]
margin_top = 35.0
margin_right = 156.0
margin_bottom = 49.0
text = "People"

[node name="PeopleContainer" type="VBoxContainer" parent="PanelContainer/Container"]
margin_top = 53.0
margin_right = 156.0
margin_bottom = 100.0

[node name="idle" parent="PanelContainer/Container/PeopleContainer" instance=ExtResource( 1 )]
margin_right = 156.0
item = "idle"

[node name="busy" parent="PanelContainer/Container/PeopleContainer" instance=ExtResource( 1 )]
margin_top = 17.0
margin_right = 156.0
margin_bottom = 30.0
item = "busy"

[node name="employed" parent="PanelContainer/Container/PeopleContainer" instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 156.0
margin_bottom = 47.0
item = "employed"

[node name="Material" type="Label" parent="PanelContainer/Container"]
margin_top = 104.0
margin_right = 156.0
margin_bottom = 118.0
text = "Material"

[node name="MaterialContainer" type="VBoxContainer" parent="PanelContainer/Container"]
margin_top = 122.0
margin_right = 156.0
margin_bottom = 203.0

[node name="stone" parent="PanelContainer/Container/MaterialContainer" instance=ExtResource( 1 )]
margin_right = 156.0
item = "Stone"

[node name="wood" parent="PanelContainer/Container/MaterialContainer" instance=ExtResource( 1 )]
margin_top = 17.0
margin_right = 156.0
margin_bottom = 30.0
item = "wood"

[node name="coal" parent="PanelContainer/Container/MaterialContainer" instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 156.0
margin_bottom = 47.0
item = "coal"

[node name="iron" parent="PanelContainer/Container/MaterialContainer" instance=ExtResource( 1 )]
margin_top = 51.0
margin_right = 156.0
margin_bottom = 64.0
item = "iron"

[node name="gold" parent="PanelContainer/Container/MaterialContainer" instance=ExtResource( 1 )]
margin_top = 68.0
margin_right = 156.0
margin_bottom = 81.0
item = "gold"

[node name="Storage" type="Label" parent="PanelContainer/Container"]
margin_top = 207.0
margin_right = 156.0
margin_bottom = 221.0
text = "Max Amount"

[node name="StorageContainer" type="VBoxContainer" parent="PanelContainer/Container"]
margin_top = 225.0
margin_right = 156.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food" parent="PanelContainer/Container/StorageContainer" instance=ExtResource( 1 )]
margin_right = 156.0
item = "food"

[node name="people" parent="PanelContainer/Container/StorageContainer" instance=ExtResource( 1 )]
margin_top = 17.0
margin_right = 156.0
margin_bottom = 30.0
item = "people"

[node name="material" parent="PanelContainer/Container/StorageContainer" instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 156.0
margin_bottom = 47.0
item = "material"
